--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         "php": "^8.0.2",
         "aws/aws-sdk-php": "^3.263",
         "bacon/bacon-qr-code": "2.0.7",
+        "barryvdh/laravel-cors": "^3.0",
         "bensampo/laravel-enum": "^6.0",
         "ctwillie/expo-server-sdk-php": "^2.0",
         "guzzlehttp/guzzle": "^7.5",
         "intervention/image": "^2.7",
-        "kreait/laravel-firebase": "*",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
